# forgejo_ssp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  flake.nix
.forgejo/workflows/: build-push.yml
src/: data.rs  main.rs
